test/sema/cast-ptr-to-immutable-into-ptr-to-mutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

void f(void* v) {
    // CHECK: [[@LINE+1]]:13: error: illegal cast from 'void*' to 'mutable int*'
    var p = cast<mutable int*>(v);
}
